--- a/ido.css
+++ b/ido.css
@@ -13,6 +13,9 @@ body
 	left:20%;
 	top:5%;
 	box-shadow: 10px -5px 20px 0px rgba(0,0,0,0.5);
+	width: 60%;
+	background-color: rgba(255,255,255,0.7);
+	margin: 2%;
 }
 
 p
