--- a/ido.css
+++ b/ido.css
@@ -15,7 +15,7 @@ body
 	box-shadow: 10px -5px 20px 0px rgba(0,0,0,0.5);
 	width: 60%;
 	background-color: rgba(255,255,255,0.7);
-	margin: 2%;
+	padding: 2%;
 }
 
 p
