--- a/ido.css
+++ b/ido.css
@@ -67,5 +67,9 @@ h1, h2{
 	text-align: center;
 	color: #808183;
 	font-weight: bold;
-	
+}
+
+li{
+	list-style-image: url(nap.png);
+	margin-left: 10%;
 }
